--- a/.env.local
+++ b/.env.local
@@ -2,8 +2,8 @@ PORT=8080
 REACT_URL=http://localhost:3000
 JWT_SECRET=hoidanitwitheric
 JWT_EXPIRES_IN=1h
-DB_NAME=sso
-DB_USERNAME=root
+DB_NAME=
+DB_USERNAME=
 DB_PASSWORD=
 DB_HOST=127.0.0.1
 DB_DIALECT=mysql
